--- a/assets/cluster_deploy.yml
+++ b/assets/cluster_deploy.yml
@@ -11,173 +11,44 @@
     cluster_name: odp-cluster
 
   tasks:
-  - name: Wait for Ambari Server to be ready
-    uri:
-      url: "{{ ambari_url }}/check"
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      return_content: no
-    register: ambari_check
-    until: ambari_check.status == 200
-    retries: 30
-    delay: 10
-    ignore_errors: yes
-
-  - name: Wait for all 4 hosts to be registered
-    uri:
-      url: "{{ ambari_url }}/hosts"
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      return_content: yes
-    register: hosts_response
-    until: hosts_response.status == 200 and (hosts_response.content | from_json)['items'] | length == 4
-    retries: 60
-    delay: 10
-    ignore_errors: yes
-
-  - name: Delete existing Cluster
-    uri:
-      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
-      method: DELETE
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      status_code: [ 200, 202, 404 ]
-
-  - name: Wait for Cluster to be deleted
-    uri:
-      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
-      method: GET
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      status_code: [ 404 ]
-    register: cluster_gone
-    until: cluster_gone.status == 404
-    retries: 60
-    delay: 5
-
-  - name: Register VDF
-    uri:
-      url: "{{ ambari_url }}/version_definitions"
-      method: POST
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      body:
-        VersionDefinition:
-          version_url: "file://{{ vdf_file }}"
-      body_format: json
-      status_code: [ 201, 409, 500 ]
-    register: vdf_registration
-    failed_when: vdf_registration.status != 201 and "Duplicate" not in vdf_registration.json.message|default("") and vdf_registration.status != 500
-
-  - name: Delete existing Blueprint
-    uri:
-      url: "{{ ambari_url }}/blueprints/odp-blueprint"
-      method: DELETE
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      status_code: [ 200, 404 ]
-
-  - name: Register Blueprint
-    uri:
-      url: "{{ ambari_url }}/blueprints/odp-blueprint?validate_topology=false"
-      method: POST
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      body: "{{ lookup('file', blueprint_file) }}"
-      body_format: json
-      status_code: [ 201, 409 ]
-
-  - name: Create Cluster
-    uri:
-      url: "{{ ambari_url }}/clusters/{{ cluster_name }}"
-      method: POST
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      body: "{{ lookup('file', cluster_template_file) }}"
-      body_format: json
-      status_code: 202
-    register: cluster_request
-
-  - name: Monitor Cluster Creation
-    uri:
-      url: "{{ cluster_request.json.href }}"
-      user: "{{ ambari_user }}"
-      password: "{{ ambari_pass }}"
-      force_basic_auth: yes
-      headers:
-        X-Requested-By: "ambari"
-      return_content: yes
-    register: request_status
-    until: (request_status.content | from_json).Requests.request_status == 'COMPLETED' or (request_status.content | from_json).Requests.request_status == 'FAILED'
-    retries: 360
-    delay: 30
-    when: cluster_request.status == 202
-
-  - name: Handle Cluster Creation Failure
+  - name: Attempt Deployment
     block:
-    - name: Fail if status is failed (to trigger rescue)
-      fail:
-        msg: "Cluster creation failed initially."
-      when: cluster_request.status == 202 and (request_status.content | from_json).Requests.request_status == 'FAILED'
+      - name: Run Deployment Tasks (First Attempt)
+        include_tasks: deploy_tasks.yml
+        vars:
+          deploy_retries: 100
 
     rescue:
-    - name: Attempting Auto-Fix for HDFS Upload (OOM workaround)
-      shell: sh /root/hdfscorrections.sh
-      delegate_to: master.cdp
+      - name: Deployment Failed - Starting Recovery Procedure
+        debug:
+          msg: "Deployment failed. Initiating cleanup and retry sequence..."
 
-    - name: Retry Failed Cluster Creation Request
-      uri:
-        url: "{{ ambari_url }}/clusters/{{ cluster_name }}/requests/{{ (request_status.content | from_json).Requests.id }}?retry_host_names=master.cdp"
-        method: POST
-        user: "{{ ambari_user }}"
-        password: "{{ ambari_pass }}"
-        force_basic_auth: yes
-        headers:
-          X-Requested-By: "ambari"
-        body: "{}"
-        body_format: json
-        status_code: 202
-      register: retry_request
+      - name: Stop Ambari Server
+        shell: ambari-server stop
+        ignore_errors: yes
 
-    - name: Monitor Retry Request
-      uri:
-        url: "{{ retry_request.json.href }}"
-        user: "{{ ambari_user }}"
-        password: "{{ ambari_pass }}"
-        force_basic_auth: yes
-        headers:
-          X-Requested-By: "ambari"
-        return_content: yes
-      register: retry_status
-      until: (retry_status.content | from_json).Requests.request_status == 'COMPLETED' or (retry_status.content | from_json).Requests.request_status == 'FAILED'
-      retries: 360
-      delay: 10
+      - name: Reset Ambari Server
+        shell: ambari-server reset --silent
+        ignore_errors: yes
 
-    - name: Fail if retry failed
-      fail:
-        msg: "Cluster creation failed even after retry. Check Ambari logs."
-      when: (retry_status.content | from_json).Requests.request_status == 'FAILED'
+      - name: Remove Phoenix PID file
+        shell: rm -f /var/run/hbase/phoenix-hbase-queryserver.pid
+        ignore_errors: yes
+
+      - name: Run HDFS Corrections
+        shell: /root/hdfscorrections.sh
+        ignore_errors: yes
+
+      - name: Run Hive Setup
+        shell: /root/hivesetup.sh
+        ignore_errors: yes
+
+      - name: Ensure Ambari Server is started
+        shell: ambari-server start
+        ignore_errors: yes
+
+      - name: Run Deployment Tasks (Retry after Reset)
+        include_tasks: deploy_tasks.yml
+        vars:
+          deploy_retries: 120
+
